# Financial_Advisor

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  auth.ts  middleware.ts  package-lock.json  package.json  rundev  vercel.json
.github/workflows/: ci.yml
analytics/: README.md  pyproject.toml  requirements.txt
analytics/docs/: FRED_INGEST.md  FRED_MACRO_EXPANSION.md  FRED_STRATEGY.md
analytics/qi/: __init__.py  config.py  ids.py
analytics/qi/data/: macro_series.json  macro_series_sandbox.json  seed_assets.csv
analytics/qi/db/: __init__.py  models.py  session.py
analytics/qi/engines/: __init__.py  allocation.py  asset_scoring.py  macro_regime.py  risk_regime.py  sector_rotation.py
analytics/qi/ingest/: __init__.py  cot_socrata.py  fmp_client.py  fred_client.py  job_logging.py  polygon_client.py  sec_edgar.py
analytics/qi/jobs/: __init__.py  export_fred_catalog.py  run_analysis.py  run_ingest_daily.py  run_universe_weekly.py  seed_assets.py
analytics/qi/universe/: __init__.py  builder.py  relevance.py
analytics/tests/: test_relevance.py
app/: layout.tsx
app/(dashboard)/: layout.tsx  page.tsx
components/budget/: BudgetMonthNav.tsx
components/dashboard/: SummaryCard.tsx
components/forms/: AddBalanceItemForm.tsx  AddBudgetCategoryForm.tsx  AddBudgetEntryForm.tsx  AddGoalForm.tsx  (+6 more)
docs/: CLAUDE_ARCHIVE.md  QI_STACK.md  SETUP.md
lib/: api-auth.ts  auth-mode.ts  budget-comparison.ts  dashboard.ts  dev-user.ts  format.ts  month.ts  rate-limit.ts  serialize.ts  server-user.ts  types.ts
prisma/: schema.prisma
tests/: schemas.test.ts
(+52 files in other folders)
